sort.basic.comb.AlgCombSort11.scala.error
Compilation error:
AlgCombSort11:12: error: not found: value ecar
    if (ecart==9||ecar==10){
                  ^