sort.basic.comb.AlgCombSort11.scala.code
def combSort11() {
  var a=getNombreValeurs()
  var ecart=a
  var b=0
  while(b!=0 ||ecart>1){
    b=0

  if (ecart>1){
    ecart = (ecart.toDouble / 1.3).toInt
      }
    if (ecart==9||ecar==10){
      ecart=11
    }
  
  var i=0
  while(i+ecart<a){
    if(!plusPetit(i,i+ecart)){
      echange(i,i+ecart);b=b+1
    }
    i+=1
  }
}  
}
